--- a/Registrar.html
+++ b/Registrar.html
@@ -13,7 +13,7 @@
 <body>
     <div id="menu">
         <section>
-            <nav id="menuinicio">
+                <nav id="menuinicio">
                 <ul class="menu-horizontal">
                     <header>
                         <li><a href="index.html">Inicio</a></li>
@@ -24,7 +24,6 @@
                                     <a href="MenuNormal.html">Normal</a>
                                 </li>
                             </ul>
-                        
                         <li><a href="Contacto.html">Contacto</a></li>
                         <li><a href="Reserva.html">Reserva</a></li>
                           <div class="container-fluid">
@@ -39,11 +38,12 @@
                         </li>
                     </header>
                 </ul>
-              </nav>
+                </nav>
         </section>
             </div>
         <section>
             <main>
+                <div class="container">
                 <form action="" class="formulario" id="formulario">
                     <div class="formulario__grupo" id="grupo__usuario">
                         <label for="usuario" class="formulario__label">Usuario</label>
@@ -105,15 +105,16 @@
                         <p><i class="fas fa-exclamation-triangle"></i> <b>Error:</b> Por favor rellena el formulario correctamente. </p>
                     </div>
                     <br>
-                    <button type="submit" class="formulario__btn">Enviar</button>
+                    <button type="submit" class="formulario__btn">Registrar</button>
                     <br>
-                    <button type="reset" class="formulario__btn">Eliminar</button>
-                        <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado exitosamente!</p>
+                    <button type="reset" class="formulario__btn">Limpiar</button>
+                        <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Registro exitosamente!</p>
                         <br>
                   </form>
                   <br>
-                  <a href="InicioSeccion.html"><button class="formulario__btn">Inicio</button></a>
-                    </main>	
+                  <a href="InicioSeccion.html"><button class="formulario__btn">Iniciar Seccion</button></a>
+                </div>    
+                </main>	
             <script src="js/formulario.js"></script>
             <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
         </section>
@@ -122,7 +123,7 @@
         <footer>
             <nav id="RedesSociales">
                 <br>
-            <h4>Redes Sociales</h4></a>
+            <h4>Redes Sociales</h4>
             <br>
                     <a href="https://www.instagram.com/"><section><i class='bx bxl-instagram-alt'></i>https://www.instagram.com/</section>
                     </a>
