--- a/Contacto.html
+++ b/Contacto.html
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="comments" class="col-sm-2 control-label">Comments</label>
+                <label for="comments" class="col-sm-2 control-label">Comentario</label>
                 <div class="col-sm-10">
                     <textarea name="comments" id="comments" cols="40" rows="5" class="form-control"></textarea>
                 </div>
@@ -97,7 +97,7 @@
             
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                    <input type="submit" class="btn btn-primary" value="Submit"/>
+                    <input type="submit" class="btn btn-primary" value="Enviar"/>
                 </div>
             </div>
 
