--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+  <a href="https://api.whatsapp.com/send?phone=+56972525843" class="btn-wsp" target="_blank">
+    <i class="fa fa-whatsapp icono"></i>
+  </a>
     <div id="menu">
         <section>
             <nav id="menuinicio">
