--- a/Contacto.html
+++ b/Contacto.html
@@ -63,7 +63,8 @@
             <h3 class="panel-title">Formulario de Contacto</h3>
          </div>
          <div class="panel-body">           
-            <form class="form-horizontal" id="signupForm">
+            <form class="form-horizontal" id="signupForm" action="https://formspree.io/f/xwkywprg"
+            method="POST">
             
             <div class="form-group">
                 <label for="fullname" class="col-sm-2 control-label">Nombre</label>
@@ -135,6 +136,25 @@
    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.0/dist/jquery.validate.js"></script>
 <script src="formulario_jquery.js" ></script>
 <script src="js/formulario_jquery.js"></script>
+<script>  
+const $form = document.querySelector('#form')
+$form.addEventListener('submit', handleSubmit)
+  async function handleSubmit(event){
+        event.preventdefault()
+        const form = new FormData(this)
+        fetch(this.action, {
+           method: this.method,
+           body: form,
+           headers:{
+            'Accept': 'application/json'
+        }
+    })
+    if (Response.ok){
+        this.reset()
+        alert('Gracias por contarcarnos, te escribiremos pronto')
+    }
+}
+</script>
 </body>
 </html>
             
