--- a/MenuNormal.html
+++ b/MenuNormal.html
@@ -22,7 +22,7 @@
         <section>
             <nav id="menuinicio">
                 <ul class="menu-horizontal">
-                    <header>
+                    <nav class="header">
                         <li><a href="index.html">Inicio</a></li>
                         <li>
                             <a href="#">Menu</a>
@@ -38,7 +38,7 @@
                             <button class="btn btn-outline-success my-2 my-sm-0"><a href="Registrar.html"><img src="img/icons8-usuario-64.png" alt=""></a></button>
                         </nav>
                         </li>
-                    </header>
+                    </nav>
                 </ul>
               </nav>
         </section>
