--- a/InicioSeccion.html
+++ b/InicioSeccion.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
@@ -15,31 +15,40 @@
     <a href="https://api.whatsapp.com/send?phone=+56972525843" class="btn-wsp" target="_blank">
 	    <i class="fa fa-whatsapp icono"></i>
 	</a>
-    <div id="menu">
-        <section>
-            <nav id="menuinicio">
-                <ul class="menu-horizontal">
-                    <ul class="header">
-                        <li><a href="index.html">Inicio</a></li>
-                        <li>
-                            <a href="#">Menu</a>
-                            <ul class="menu-vertical">
-                                <li><a href="MenuVegetariano.html">Vegetariano</a>
-                                    <a href="MenuNormal.html">Normal</a>
-                                </li>
-                            </ul>
-                        
-                        <li><a href="Contacto.html">Contacto</a></li>
-                        <li><a href="Reserva.html">Reserva</a></li>
-                          <nav class="inicioseccion">
-                            <button class="btn btn-outline-success my-2 my-sm-0"><a href="Registrar.html"><img src="img/icons8-usuario-64.png" alt=""></a></button>
-                        </nav>
-                        </li>
-                    </ul>
-                </ul>
-              </nav>
-        </section>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarScroll">
+              <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="index.html"">Inicio</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Menus
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                    <li><a class="dropdown-item" href="MenuVegetariano.html">Menu vegetariano</a></li>
+                    <li><a class="dropdown-item" href="MenuNormal.html">Menu Normal</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="Contacto.html">Contacto</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="Reserva.html">Reserva</a>
+                </li>
+              </ul>
+              <nav class="inicioseccion">
+                <button class="btn btn-outline-success my-2 my-sm-0"><a href="Registrar.html"><img src="img/icons8-usuario-64.png" alt=""></a></button>
+            </nav>
             </div>
+          </div>
+        </nav>
+      </header>
         <section>
             <main>
                 <div class="container">
